--- a/_posts/2020-04-10-gnocchi.md
+++ b/_posts/2020-04-10-gnocchi.md
@@ -5,7 +5,7 @@ author: "tiuti"
 categories: italiano, vegetariano
 ---
 
-Uma receita fácil e tipico de Gnocci.
+Uma receita fácil e típica de Gnocci.
 O tipo de batata não importa tanto.
 Eu fiz boas experiências com uma mistura de batatas farinhosas e normais.
 
