--- a/_posts/2020-04-10-gnocchi.md
+++ b/_posts/2020-04-10-gnocchi.md
@@ -28,7 +28,7 @@ Eu fiz boas experiências com uma mistura de batatas farinhosas e normais.
 </table>
 
 Cozinhe as batatas inteiras sem descascar –
-isso não deixa tanta agua entrar nas batatas e melhora o sabor.
+isso não deixa tanta água entrar nas batatas e melhora o sabor.
 Ainda quente descasca as batatas e esmaga elas.
 Coloca a farinha e o ovo sem amassar muito e forma os gnocchi.
 
