--- a/_posts/2020-04-10-gnocchi.md
+++ b/_posts/2020-04-10-gnocchi.md
@@ -29,7 +29,7 @@ Eu fiz boas experiências com uma mistura de batatas farinhosas e normais.
 
 Cozinhe as batatas inteiras sem descascar –
 isso não deixa tanta água entrar nas batatas e melhora o sabor.
-Ainda quente descasca as batatas e esmaga elas.
+Ainda quente descasque e amasse as batatas.
 Coloca a farinha e o ovo sem amassar muito e forma os gnocchi.
 
 Se cozinha os gnocchi em agua salgada.
