--- a/_posts/2020-04-10-gnocchi.md
+++ b/_posts/2020-04-10-gnocchi.md
@@ -32,5 +32,5 @@ isso não deixa tanta água entrar nas batatas e melhora o sabor.
 Ainda quente descasque e amasse as batatas.
 Coloque a farinha e os ovos sem amassar muito e forme os gnocchi.
 
-Se cozinha os gnocchi em agua salgada.
+Se cozinha os gnocchi em água salgada.
 Eles estão prontos quando eles sobem pra cima na panela.
