--- a/_posts/2020-04-10-gnocchi.md
+++ b/_posts/2020-04-10-gnocchi.md
@@ -33,4 +33,4 @@ Ainda quente descasque e amasse as batatas.
 Coloque a farinha e os ovos sem amassar muito e forme os gnocchi.
 
 Se cozinha os gnocchi em água salgada.
-Eles estão prontos quando eles sobem pra cima na panela.
+Eles estarão prontos quando estiverem na parte superior da panela.
